fix: change & on &amp;

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 							Microservices
 						</li>
 						<li><strong>Version Control:</strong> Git, GitHub</li>
-						<li><strong>Tools & Environment:</strong> VS Code, IntelliJ IDEA, WebStorm, Postman, Docker</li>
+						<li><strong>Tools &amp; Environment:</strong> VS Code, IntelliJ IDEA, WebStorm, Postman, Docker</li>
 						<li><strong>Methodologies:</strong> Agile principles, Scrum</li>
 						<li><strong>Soft Skills:</strong> Problem-Solving, Teamwork, Adaptability, Fast Learner,
 							Attention to Detail
@@ -110,7 +110,7 @@
 public class FindOutlier {
   static int find(int[] integers) {
     int evenCount = 0;
-    for (int i = 0; i &lt; 3; i++) {
+    for (int i = 0; i < 3; i++) {
       if (integers[i] % 2 == 0) evenCount++;
     }
     boolean majorityEven = evenCount >= 2;
@@ -200,10 +200,10 @@ public class FindOutlier {
 				<span>© 2025 Nikolai Murtazin</span>
 				<a href="https://github.com/NikolaiMurtazin" target="_blank" rel="noopener noreferrer"
 				   aria-label="Github">
-					<img src="assets/logo/github.svg" alt="GitHub" height="28" style="vertical-align:middle;">
+					<img src="assets/logo/github.svg" alt="GitHub" height="28">
 				</a>
 				<a href="https://rs.school/" target="_blank" rel="noopener noreferrer" aria-label="RS School">
-					<img src="assets/logo/rs-school-logo.svg" alt="RS School" height="28" style="vertical-align:middle;">
+					<img src="assets/logo/rs-school-logo.svg" alt="RS School" height="28">
 				</a>
 			</div>
 		</footer>
