--- a/index.html
+++ b/index.html
@@ -110,10 +110,10 @@
 public class FindOutlier {
   static int find(int[] integers) {
     int evenCount = 0;
-    for (int i = 0; i < 3; i++) {
+    for (int i = 0; i &lt; 3; i++) {
       if (integers[i] % 2 == 0) evenCount++;
     }
-    boolean majorityEven = evenCount >= 2;
+    boolean majorityEven = evenCount &gt;= 2;
     for (int num : integers) {
       if ((num % 2 == 0) != majorityEven) {
         return num;
